--- a/KeyAndAddressGeneration.ipynb
+++ b/KeyAndAddressGeneration.ipynb
@@ -249,7 +249,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compress the public key, adjusting prefix depending on whether $y$ is even or odd"
+    "We compress the public key, adjusting prefix depending on whether $y$ is even or odd\n",
+    "\n",
+    "### Note on \"compression\"\n",
+    "The public key is a point. Here, \"compression\" refers to taking only the x component of the (x,y) pair that is the public key. Every use of \"compression\" points to that."
    ]
   },
   {
