--- a/KeyAndAddressGeneration.ipynb
+++ b/KeyAndAddressGeneration.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -69,8 +69,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key (hex) is:  f0a3b14b77f86afca087fdfdd68fa5917c7563648db44b76291d3cf031d0c643\n",
-      "Private Key (decimal) is:  108844303375276547733718999297423996970605593588872697801111435468685966362179\n"
+      "Private Key (hex) is:  80558e5954b3cc2eb1b3a634f631d2849d9e88742c1e9cb145e9245b6f6a9de2\n",
+      "Private Key (decimal) is:  58047209075500954953828700918391785314477924381046197853910210055201587109346\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -108,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key (WIF) is:  5KeGPj3PuPQZ7AmphBqCTJPro6ycCebfzwqZ5Vm2N6s6h3s3MEV\n"
+      "Private Key (WIF) is:  5JnohvtQqyTCQMiVgYqqQpNnZrdx1g75Ed8SSWd9g9yZZ27jqe3\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -139,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key Compressed (hex) is:  f0a3b14b77f86afca087fdfdd68fa5917c7563648db44b76291d3cf031d0c64301\n"
+      "Private Key Compressed (hex) is:  80558e5954b3cc2eb1b3a634f631d2849d9e88742c1e9cb145e9245b6f6a9de201\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -171,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key (WIF-Compressed) is:  L5HUwJZa6DtxiE8qWNojZ5mtnVNrNQx38m3JaqwK28t87Nj3SkJV\n"
+      "Private Key (WIF-Compressed) is:  L1XB9eqvFAAdL6S9bZYYg87A8265oyboh8TqHbkZHpcegDzZ8D6n\n"
      ]
     }
    ],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -205,7 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Public Key (x,y) coordinates is: (94975686041702978464708086685935502719370584860157694448638800434455447892734, 18152670299822949699444414757492961746715405978332902079947279307753095118501)\n"
+      "Public Key (x,y) coordinates is: (57119633812722101323447062300054051366774019088490393806290653102014648620090, 42028849852090837927267654500191728373960641645568041272725782315563543982261)\n"
      ]
     }
    ],
@@ -218,46 +218,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we encode that public key as hex, prefix 04."
+    "Now we encode that public key as hex. It is done by concatenation of prefix 04 plus x(in hex) plus y(in hex). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "CsiEppUhuIFk",
-    "outputId": "edd23916-1ef6-4e9c-bdc6-55e0b632e0f0"
+    "outputId": "edd23916-1ef6-4e9c-bdc6-55e0b632e0f0",
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Public Key (hex) is: 04d1fa5554510101d988a24af7910177a7a9eaa881f0d493d8f0fa92d1f82c72fe28220c1b466920c95eff790e90ed9d6106f52c6bb18b1e241f6bca3c7e8b3ea5\n"
+      "x component in hex is:  0x7e48912aa1b1dd3f15ef005c1a345d37d934c1d0b065b2621008b6553541143a\n",
+      "y component in hex is:  0x5ceb7c6bc6e52f084baf7700abf43b82945782abe1dbdd4b171a65d0948070b5\n",
+      "\n",
+      "Public Key (hex) is: 047e48912aa1b1dd3f15ef005c1a345d37d934c1d0b065b2621008b6553541143a5ceb7c6bc6e52f084baf7700abf43b82945782abe1dbdd4b171a65d0948070b5\n"
      ]
     }
    ],
    "source": [
+    "print(\"x component in hex is: \", hex(public_key[0]))\n",
+    "print(\"y component in hex is: \", hex(public_key[1]))\n",
+    "\n",
     "hex_encoded_public_key = bitcoin.encode_pubkey(public_key, 'hex')\n",
-    "print(\"Public Key (hex) is:\", hex_encoded_public_key)"
+    "print(\"\\nPublic Key (hex) is:\", hex_encoded_public_key)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We compress the public key, adjusting prefix depending on whether $y$ is even or odd\n",
+    "### On \"compression\"\n",
     "\n",
-    "### Note on \"compression\"\n",
-    "The public key is a point. Here, \"compression\" refers to taking only the x component of the (x,y) pair that is the public key. Every use of \"compression\" points to that."
+    "The public key is a point, as you see, but we can manage with only the x component.\n",
+    "\"Compression\" makes reference to the process of taking only the x component of the (x,y) pair that forms the public key. Every use of \"compression\" refers to that process.\n",
+    "\n",
+    "So now we compress the public key, adjusting prefix depending on whether $y$ is even or odd."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -270,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compressed Public Key (hex) is: 03d1fa5554510101d988a24af7910177a7a9eaa881f0d493d8f0fa92d1f82c72fe\n"
+      "Compressed Public Key (hex) is: 037e48912aa1b1dd3f15ef005c1a345d37d934c1d0b065b2621008b6553541143a\n"
      ]
     }
    ],
@@ -292,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -306,24 +315,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bitcoin Address (b58check) is: 13KxgxSRfiJ8evByUPpUSVH8Rhe8kvmL8c\n"
+      "Generating address for the public key:  (57119633812722101323447062300054051366774019088490393806290653102014648620090, 42028849852090837927267654500191728373960641645568041272725782315563543982261)\n",
+      "\n",
+      "Bitcoin Address (b58check) is: 1PHyaL6EopaKAWimCedgy9R7YfRQajJC2R\n"
      ]
     }
    ],
    "source": [
-    "print(\"Bitcoin Address (b58check) is:\", bitcoin.pubkey_to_address(public_key))"
+    "print(\"Generating address for the public key: \", public_key)\n",
+    "print(\"\\nBitcoin Address (b58check) is:\", bitcoin.pubkey_to_address(public_key))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The address is now compressed."
+    "The address is now compressed (meaning: it will be generated from the compressed public key, the one with x component only)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -337,14 +349,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compressed Bitcoin Address (b58check) is: 1JmSys1f8WKWDXwakcrnRACvU3Ps97NNFX\n"
+      "Generating address from the compressed public key:  037e48912aa1b1dd3f15ef005c1a345d37d934c1d0b065b2621008b6553541143a\n",
+      "\n",
+      "Compressed Bitcoin Address (b58check) is: 1AijAtwkVMvQvmFwKvKvYA619uAiF3bEwV\n"
      ]
     }
    ],
    "source": [
-    "# Generate compressed bitcoin address from compressed public key\n",
-    "print(\"Compressed Bitcoin Address (b58check) is:\",\n",
-    "      bitcoin.pubkey_to_address(hex_compressed_public_key))"
+    "print(\"Generating address from the compressed public key: \", hex_compressed_public_key)\n",
+    "\n",
+    "print(\"\\nCompressed Bitcoin Address (b58check) is:\", bitcoin.pubkey_to_address(hex_compressed_public_key))"
    ]
   },
   {
@@ -353,6 +367,8 @@
     "id": "idB0V-DavVnl"
    },
    "source": [
+    "Please note that the address generated is different depending if we started with the (x,y) public key or with the compressed (x) one. The wallet software must take care for the compatibility between old non-compressed addresses and compressed ones.\n",
+    "\n",
     "And that's all !"
    ]
   },
@@ -361,7 +377,7 @@
    "metadata": {},
    "source": [
     "## NOTE\n",
-    "As you see, this process proceeds in a one-to-one fashion: one seed, one private key, one public key, one address. Obviously we want more flexibility in our wallets. That's what the seed words are for: with the words, several seeds are generated, which lead to several private keys, etc. \n",
+    "As you see, this process proceeds in a one-to-one fashion: one seed, one private key, one public key, one address (compressed or not). Obviously we want more flexibility in our wallets. That's what the seed words are for: with the words, several seeds are generated, which lead to several private keys, etc. \n",
     "\n",
     "From the words to the keys, that should be a topic for another Notebook. "
    ]
