--- a/KeyAndAddressGeneration.ipynb
+++ b/KeyAndAddressGeneration.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -69,8 +69,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key (hex) is:  80558e5954b3cc2eb1b3a634f631d2849d9e88742c1e9cb145e9245b6f6a9de2\n",
-      "Private Key (decimal) is:  58047209075500954953828700918391785314477924381046197853910210055201587109346\n"
+      "Private Key (hex) is:  0e64560b66f7c04d0f5c66328ee62b1783294859c0c10cab8d66610ebce29daa\n",
+      "Private Key (decimal) is:  6509658444232577869753023006065702289253604268314065970305908148334806343082\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -108,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key (WIF) is:  5JnohvtQqyTCQMiVgYqqQpNnZrdx1g75Ed8SSWd9g9yZZ27jqe3\n"
+      "Private Key (WIF) is:  5HvdCoLrFmNc71phn4eHe7neC3cfh4yHsCkx5AYBFvJt64P3NoF\n"
      ]
     }
    ],
@@ -121,12 +121,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We add suffix \"01\" to create a \"compressed\" private key."
+    "We add suffix \"01\" to create a \"compressed\" private key. Basically, adding \"01\" does not compress anything; it's just a signal for the wallet software to use that private key for generating compressed public keys ONLY. \n",
+    "\n",
+    "The goal is to keep compatibility of newer wallets with the old ones, which didn't deal with \"compressed\" keys.\n",
+    "More info on \"compression\" below. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -139,7 +142,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key Compressed (hex) is:  80558e5954b3cc2eb1b3a634f631d2849d9e88742c1e9cb145e9245b6f6a9de201\n"
+      "Private Key Compressed (hex) is:  0e64560b66f7c04d0f5c66328ee62b1783294859c0c10cab8d66610ebce29daa01\n"
      ]
     }
    ],
@@ -157,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -171,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key (WIF-Compressed) is:  L1XB9eqvFAAdL6S9bZYYg87A8265oyboh8TqHbkZHpcegDzZ8D6n\n"
+      "Private Key (WIF-Compressed) is:  Kwhgo5YcQArMwYdYyu5aSpxT9kYRmrXTSatz5P6cGrHvV7TZMDSa\n"
      ]
     }
    ],
@@ -191,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -205,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Public Key (x,y) coordinates is: (57119633812722101323447062300054051366774019088490393806290653102014648620090, 42028849852090837927267654500191728373960641645568041272725782315563543982261)\n"
+      "Public Key (x,y) coordinates is: (113024833266739653776745878777873326346341954074713104127796608730692223400077, 77438189732872236239614089247879610977867735648464166360793462234653130989657)\n"
      ]
     }
    ],
@@ -223,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -237,10 +240,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x component in hex is:  0x7e48912aa1b1dd3f15ef005c1a345d37d934c1d0b065b2621008b6553541143a\n",
-      "y component in hex is:  0x5ceb7c6bc6e52f084baf7700abf43b82945782abe1dbdd4b171a65d0948070b5\n",
+      "x component in hex is:  0xf9e1c9e355883bee2a9712e59ad94b2d763f70177f1d8d6821c12592de2a788d\n",
+      "y component in hex is:  0xab3476508d7d3d02e472169faeed37e91872f730961635b9990ae58d4a83a059\n",
       "\n",
-      "Public Key (hex) is: 047e48912aa1b1dd3f15ef005c1a345d37d934c1d0b065b2621008b6553541143a5ceb7c6bc6e52f084baf7700abf43b82945782abe1dbdd4b171a65d0948070b5\n"
+      "Public Key (hex) is: 04f9e1c9e355883bee2a9712e59ad94b2d763f70177f1d8d6821c12592de2a788dab3476508d7d3d02e472169faeed37e91872f730961635b9990ae58d4a83a059\n"
      ]
     }
    ],
@@ -259,14 +262,14 @@
     "### On \"compression\"\n",
     "\n",
     "The public key is a point, as you see, but we can manage with only the x component.\n",
-    "\"Compression\" makes reference to the process of taking only the x component of the (x,y) pair that forms the public key. Every use of \"compression\" refers to that process.\n",
+    "\"Compression\" makes reference to the process of taking only the x component of the (x,y) pair that forms the public key. Every use of \"compression\" refers to that process. For instance, a \"compressed private key\" is one that will be used only for generating compressed public keys.\n",
     "\n",
     "So now we compress the public key, adjusting prefix depending on whether $y$ is even or odd."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -279,7 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compressed Public Key (hex) is: 037e48912aa1b1dd3f15ef005c1a345d37d934c1d0b065b2621008b6553541143a\n"
+      "Compressed Public Key (hex) is: 03f9e1c9e355883bee2a9712e59ad94b2d763f70177f1d8d6821c12592de2a788d\n"
      ]
     }
    ],
@@ -301,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -315,9 +318,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating address for the public key:  (57119633812722101323447062300054051366774019088490393806290653102014648620090, 42028849852090837927267654500191728373960641645568041272725782315563543982261)\n",
+      "Generating address for the public key:  (113024833266739653776745878777873326346341954074713104127796608730692223400077, 77438189732872236239614089247879610977867735648464166360793462234653130989657)\n",
       "\n",
-      "Bitcoin Address (b58check) is: 1PHyaL6EopaKAWimCedgy9R7YfRQajJC2R\n"
+      "Bitcoin Address (b58check) is: 1CBZUock31R4fzmc2hDGfNXCLLXiusdQNq\n"
      ]
     }
    ],
@@ -335,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -349,14 +352,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating address from the compressed public key:  037e48912aa1b1dd3f15ef005c1a345d37d934c1d0b065b2621008b6553541143a\n",
+      "The compressed public key is:  03f9e1c9e355883bee2a9712e59ad94b2d763f70177f1d8d6821c12592de2a788d\n",
       "\n",
-      "Compressed Bitcoin Address (b58check) is: 1AijAtwkVMvQvmFwKvKvYA619uAiF3bEwV\n"
+      "Compressed Bitcoin Address (b58check) is: 166UGtSF2f38csxTB3HDiUJstiwRqZs32B\n"
      ]
     }
    ],
    "source": [
-    "print(\"Generating address from the compressed public key: \", hex_compressed_public_key)\n",
+    "print(\"The compressed public key is: \", hex_compressed_public_key)\n",
     "\n",
     "print(\"\\nCompressed Bitcoin Address (b58check) is:\", bitcoin.pubkey_to_address(hex_compressed_public_key))"
    ]
@@ -367,7 +370,7 @@
     "id": "idB0V-DavVnl"
    },
    "source": [
-    "Please note that the address generated is different depending if we started with the (x,y) public key or with the compressed (x) one. The wallet software must take care for the compatibility between old non-compressed addresses and compressed ones.\n",
+    "Please note that the address generated is different depending if we started with the (x,y) public key or with the compressed (x) one. The wallet software must take care for the compatibility between old non-compressed addresses and compressed ones, by looking at the \"01\" suffix in the private key.\n",
     "\n",
     "And that's all !"
    ]
