--- a/KeyAndAddressGeneration.ipynb
+++ b/KeyAndAddressGeneration.ipynb
@@ -23,12 +23,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we need the bitcoin package."
+    "First, we need the bitcoin package. \n",
+    "I will also use the logging module because it's a better practice to log than to print."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -40,7 +41,11 @@
    "source": [
     "# !pip install bitcoin   # Uncomment if needed\n",
     "from __future__ import print_function\n",
-    "import bitcoin"
+    "import bitcoin\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.INFO, format='%(levelname)s - %(message)s')\n",
+    "# Uncomment if you want to disable logs\n",
+    "# logging.disable(logging.INFO)"
    ]
   },
   {
@@ -49,14 +54,14 @@
    "source": [
     "## Generate a random private key\n",
     "\n",
-    "We generate a random private key, but it must be valid. In other words, it must be an integer between 1 and `bitcoin.N`. This number, in the standard secp256k1, is the size $p$ of the Finite Field $F_p$ where the elliptic curve $y^2=x^3+7$ is defined. Its value is: $2^{256} - 2^{32} - 2^9 - 2^8 - 2^7 - 2^6 - 2^4 - 1$.\n",
+    "We generate a random number but, to be a valid private key, it must be an integer between 1 and `bitcoin.N`. This last number, in the standard secp256k1, is the size $p$ of the Finite Field $F_p$ where the elliptic curve $y^2=x^3+7$ is defined. Its value is: $2^{256} - 2^{32} - 2^9 - 2^8 - 2^7 - 2^6 - 2^4 - 1$.\n",
     "\n",
-    "*Note: In the book, example 4.3 is in cpp. If you want to reproduce that example here, change `bitcoin.random_key()` with the following string: `private_key = \"038109007313a5807b2eccc082c8c3fbb988a973cacf1a7df9ce725c31b14776\"`*"
+    "*Note: In Antonopoulos' book, the example 4.3 is in cpp. If you want to reproduce that example here, change `bitcoin.random_key()` with the following string: `private_key = \"038109007313a5807b2eccc082c8c3fbb988a973cacf1a7df9ce725c31b14776\"`*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -66,15 +71,24 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - We generate random numbers until we find one lower than 115792089237316195423570985008687907852837564279074904382605163141518161494337\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key (hex) is:  0e64560b66f7c04d0f5c66328ee62b1783294859c0c10cab8d66610ebce29daa\n",
-      "Private Key (decimal) is:  6509658444232577869753023006065702289253604268314065970305908148334806343082\n"
+      "Private Key (hex) is:  177ff4a44d8c27f05647a9ac1a3f60cf432fbfb6a307e01e3f5b0f3878ded2b3\n",
+      "Private Key (decimal) is:  10629273550348555349901460848557787944580676248330772490612016919618250527411\n"
      ]
     }
    ],
    "source": [
+    "logging.info('We generate random numbers until we find one lower than ' + str(bitcoin.N))\n",
+    "\n",
     "valid_private_key = False\n",
     "while not valid_private_key:    \n",
     "    private_key = bitcoin.random_key()\n",
@@ -90,25 +104,19 @@
    "metadata": {},
    "source": [
     "### WIF\n",
-    "The private key is now converted to Wallet Import Format (WIF). Supposedly, the WIF format encoding allows easy copy of a big number."
+    "The private key can be converted to Wallet Import Format (WIF). Supposedly, the WIF format encoding allows easy copy of a big number.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "fHnNRdIFuATM",
-    "outputId": "9112fd57-67c3-41cd-d97f-adc41e651845"
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key (WIF) is:  5HvdCoLrFmNc71phn4eHe7neC3cfh4yHsCkx5AYBFvJt64P3NoF\n"
+      "Private Key (WIF) is:  5HzdrRtN4NeqNHUihoCYR6EVjFUDQh7HHa97ssQikizpZruJour\n"
      ]
     }
    ],
@@ -121,46 +129,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We add suffix \"01\" to create a \"compressed\" private key. Basically, adding \"01\" does not compress anything; it's just a signal for the wallet software to use that private key for generating compressed public keys ONLY. \n",
     "\n",
-    "The goal is to keep compatibility of newer wallets with the old ones, which didn't deal with \"compressed\" keys.\n",
-    "More info on \"compression\" below. "
+    "We add suffix \"01\" to the original private key to create a \"compressed\" private key. Basically, adding \"01\" does not compress anything; it's just a signal for the wallet software to use that private key for generating compressed public keys ONLY. The goal is to keep compatibility of newer wallets with the old ones, which don't manage \"compressed\" keys.\n",
+    "More info on \"compression\" below. \n",
+    "\n",
+    "We can also generate a WIF format from the compressed private key (WIF-compressed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "EtYuNFW7uCnN",
-    "outputId": "25f71802-a3d8-48e9-999f-34fa372c585e"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Private Key Compressed (hex) is:  0e64560b66f7c04d0f5c66328ee62b1783294859c0c10cab8d66610ebce29daa01\n"
-     ]
-    }
-   ],
-   "source": [
-    "compressed_private_key = private_key + '01'\n",
-    "print(\"Private Key Compressed (hex) is: \", compressed_private_key)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we generate a WIF format from the compressed private key (WIF-compressed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -171,14 +149,26 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - Now, compression. Note the 01 added at the end of the already generated private key.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Private Key (WIF-Compressed) is:  Kwhgo5YcQArMwYdYyu5aSpxT9kYRmrXTSatz5P6cGrHvV7TZMDSa\n"
+      "Private Key Compressed (hex) is:  177ff4a44d8c27f05647a9ac1a3f60cf432fbfb6a307e01e3f5b0f3878ded2b301\n",
+      "Private Key (WIF-Compressed) is:  Kx1PfAqhwtZzUwjM54uwfL6ZoUs7ma2it9GqMXVhHzNCwvXk88XL\n"
      ]
     }
    ],
    "source": [
+    "logging.info('Now, compression. Note the 01 added at the end of the already generated private key.')\n",
+    "\n",
+    "compressed_private_key = private_key + '01'\n",
+    "print(\"Private Key Compressed (hex) is: \", compressed_private_key)\n",
     "wif_compressed_private_key = bitcoin.encode_privkey(bitcoin.decode_privkey(compressed_private_key, 'hex'), 'wif')\n",
     "print(\"Private Key (WIF-Compressed) is: \", wif_compressed_private_key)"
    ]
@@ -189,12 +179,14 @@
    "source": [
     "# From Private Key to Public Key\n",
     "\n",
-    "We multiply the EC generator point G, `bitcoin.G`, with the private key, to get a public key point. The G point, if you are interested, is $(55066263022277343669578718895168534326250603453777594175500187360389116729240, 32670510020758816978083085130507043184471273380659243275938904335757337482424)$"
+    "We multiply the private key and the Elliptic Curve generator point G, `bitcoin.G`. The result is a point that will be used as public key. \n",
+    "\n",
+    "The G point, for those interested, is $(55066263022277343669578718895168534326250603453777594175500187360389116729240, 32670510020758816978083085130507043184471273380659243275938904335757337482424)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -208,25 +200,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Public Key (x,y) coordinates is: (113024833266739653776745878777873326346341954074713104127796608730692223400077, 77438189732872236239614089247879610977867735648464166360793462234653130989657)\n"
+      "Public Key (x,y) is: (34659121358656894097978999572154392346265186598154399035690715714022049873667, 41970595200530075582395168597798444714875162052094091273249293293219026042389)\n"
      ]
     }
    ],
    "source": [
     "public_key = bitcoin.fast_multiply(bitcoin.G, decoded_private_key)\n",
-    "print(\"Public Key (x,y) coordinates is:\", public_key)"
+    "print(\"Public Key (x,y) is:\", public_key)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we encode that public key as hex. It is done by concatenation of prefix 04 plus x(in hex) plus y(in hex). "
+    "Now we encode that public key as hex. It is done by concatenation of prefix 04 with x (in hex) and y (in hex). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -237,19 +229,25 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - The x component in hex is: 0x4ca05e1535a30e4f909950e43fa681b0a9857bb9c76ef42fad584e6a07747f03\n",
+      "The y component in hex is: 0x5cca83daa87e90e2828f20efea71317db5ae04e26d70cf922a6afccf9af7fe15\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x component in hex is:  0xf9e1c9e355883bee2a9712e59ad94b2d763f70177f1d8d6821c12592de2a788d\n",
-      "y component in hex is:  0xab3476508d7d3d02e472169faeed37e91872f730961635b9990ae58d4a83a059\n",
       "\n",
-      "Public Key (hex) is: 04f9e1c9e355883bee2a9712e59ad94b2d763f70177f1d8d6821c12592de2a788dab3476508d7d3d02e472169faeed37e91872f730961635b9990ae58d4a83a059\n"
+      "Public Key (hex) is: 044ca05e1535a30e4f909950e43fa681b0a9857bb9c76ef42fad584e6a07747f035cca83daa87e90e2828f20efea71317db5ae04e26d70cf922a6afccf9af7fe15\n"
      ]
     }
    ],
    "source": [
-    "print(\"x component in hex is: \", hex(public_key[0]))\n",
-    "print(\"y component in hex is: \", hex(public_key[1]))\n",
+    "logging.info('The x component in hex is: ' + hex(public_key[0]) + \n",
+    "             '\\nThe y component in hex is: ' + hex(public_key[1]))\n",
     "\n",
     "hex_encoded_public_key = bitcoin.encode_pubkey(public_key, 'hex')\n",
     "print(\"\\nPublic Key (hex) is:\", hex_encoded_public_key)"
@@ -269,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -282,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compressed Public Key (hex) is: 03f9e1c9e355883bee2a9712e59ad94b2d763f70177f1d8d6821c12592de2a788d\n"
+      "Compressed Public Key (hex) is: 034ca05e1535a30e4f909950e43fa681b0a9857bb9c76ef42fad584e6a07747f03\n"
      ]
     }
    ],
@@ -299,12 +297,12 @@
    "source": [
     "# Generation of the bitcoin address from the public key\n",
     "\n",
-    "At last, we generate the address that corresponds to the public key."
+    "Finally, we will generate the address that corresponds to the public key."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -315,17 +313,23 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - Generating address in b58check for our public key: (34659121358656894097978999572154392346265186598154399035690715714022049873667, 41970595200530075582395168597798444714875162052094091273249293293219026042389)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating address for the public key:  (113024833266739653776745878777873326346341954074713104127796608730692223400077, 77438189732872236239614089247879610977867735648464166360793462234653130989657)\n",
       "\n",
-      "Bitcoin Address (b58check) is: 1CBZUock31R4fzmc2hDGfNXCLLXiusdQNq\n"
+      "Bitcoin Address (b58check) is: 1KGsnJeLYJHd7nZbUCmT65riEkMwjakbLE\n"
      ]
     }
    ],
    "source": [
-    "print(\"Generating address for the public key: \", public_key)\n",
+    "logging.info(\"Generating address in b58check for our public key \" + str(public_key))\n",
     "print(\"\\nBitcoin Address (b58check) is:\", bitcoin.pubkey_to_address(public_key))"
    ]
   },
@@ -338,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -349,17 +353,23 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO - Generating compressed address, from our compressed public key 034ca05e1535a30e4f909950e43fa681b0a9857bb9c76ef42fad584e6a07747f03\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The compressed public key is:  03f9e1c9e355883bee2a9712e59ad94b2d763f70177f1d8d6821c12592de2a788d\n",
       "\n",
-      "Compressed Bitcoin Address (b58check) is: 166UGtSF2f38csxTB3HDiUJstiwRqZs32B\n"
+      "Compressed Bitcoin Address (b58check) is: 16SgUhMX3R49CmUNyyvRTahAB2V6a5DqsH\n"
      ]
     }
    ],
    "source": [
-    "print(\"The compressed public key is: \", hex_compressed_public_key)\n",
+    "logging.info(\"Generating compressed address, from our compressed public key \" + hex_compressed_public_key)\n",
     "\n",
     "print(\"\\nCompressed Bitcoin Address (b58check) is:\", bitcoin.pubkey_to_address(hex_compressed_public_key))"
    ]
